# MLOps-Assignment

./: .containerignore  .gitignore  Containerfile  Makefile  README.md  SUBMISSION_CHECKLIST.md  assignment.txt  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  app.py  example_requests.json  logging_config.py  tracing.py
api/static/: app.js  index.html  styles.css
data/feedback/: .gitkeep
deploy/k8s/: README.md  bringdown.sh  bringup.sh  deploy.sh  deployment.yaml  ingress.yaml  mlflow-deployment.yaml  mlflow-service.yaml  namespace.yaml  service.yaml
monitoring/: RETRAINING_RUNBOOK.md  drift_detection.py
monitoring/grafana/dashboards/: api-monitoring.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/prometheus/: prometheus.yml
notebooks/: 01_eda.ipynb  02_training_and_analysis.ipynb
pipelines/: prefect_flow.py
project notes/: Completion-Plan.md  DAY6-9_SUMMARY.md  DELIVERABLES_CHECKLIST.md  changes.md  day3_changes.diff  day3_changes_summary.diff  plan.md
reports/: ARCHITECTURE.md  FINAL_REPORT.docx  FINAL_REPORT.md
src/heart_disease_mlops/: __init__.py  __main__.py  config.py  data.py  evaluate.py  preprocessing.py  train.py  validation.py
tests/: conftest.py  test_api.py  test_data.py  test_feedback.py  test_preprocessing.py  test_tracing.py  test_train.py
