[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-disease-mlops"
version = "0.1.0"
description = "End-to-end MLOps pipeline for the UCI Cleveland Heart Disease dataset."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MLOps Assignment" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "mlflow>=2.12",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.5",
    "prometheus-client>=0.20",
    "python-json-logger>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.4",
]
orchestration = [
    "prefect>=2.16",
]
monitoring = [
    "evidently>=0.4",
]

[project.scripts]
heart-disease-train = "heart_disease_mlops.train:_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests that train models or do heavy I/O",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "artifacts", "mlruns", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["heart_disease_mlops"]
omit = ["*/__main__.py"]
