[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-disease-mlops"
version = "0.1.0"
description = "End-to-end MLOps pipeline for the UCI Cleveland Heart Disease dataset."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MLOps Assignment" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # MLflow 3.x is required for the @mlflow.trace decorator and the
    # mlflow.start_span context manager used in api/app.py and src/.../train.py.
    # Installing `mlflow` also pulls in `mlflow-tracing`, `mlflow-skinny`, and
    # the OpenTelemetry SDK that backs the tracing exporter.
    "mlflow>=3.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.5",
    "prometheus-client>=0.20",
    "python-json-logger>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.4",
]
orchestration = [
    # Prefect 3.x flow API is what `pipelines/prefect_flow.py` targets.
    "prefect>=3.0",
]
monitoring = [
    # Evidently 0.7 reworked the report API used by monitoring/drift_detection.py.
    "evidently>=0.7",
]
notebooks = [
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
]
all = [
    "heart-disease-mlops[api,dev,orchestration,monitoring,notebooks]",
]

[project.scripts]
heart-disease-train = "heart_disease_mlops.train:_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests that train models or do heavy I/O",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "artifacts", "mlruns", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["heart_disease_mlops"]
omit = ["*/__main__.py"]
